--- a/netlify.toml
+++ b/netlify.toml
@@ -6,7 +6,7 @@
 [[headers]]
     for = "/*"
     [headers.values]
-        Content-Security-Policy = "default-src 'self' ; script-src 'self' 'unsafe-inline' https://www.google-analytics.com; style-src 'self' 'unsafe-inline' ; img-src 'self' https://www.google-analytics.com https://stats.g.doubleclick.net data: ; upgrade-insecure-requests; block-all-mixed-content; report-uri https://panda.report-uri.com/r/d/csp/enforce"
+        Content-Security-Policy = "default-src 'self' ; script-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://www.google-analytics.com; style-src 'self' 'unsafe-inline' ; img-src 'self' https://www.google-analytics.com https://stats.g.doubleclick.net data: ; upgrade-insecure-requests; block-all-mixed-content; report-uri https://panda.report-uri.com/r/d/csp/enforce"
         Expect-CT = "max-age=0, report-uri='https://panda.report-uri.com/r/d/ct/reportOnly'"
         Referrer-Policy = "strict-origin-when-cross-origin"
         X-Content-Type-Options = "nosniff"
@@ -19,5 +19,11 @@
 [[redirects]]
     from = "/1.0.0/*"
     to = "/:splat"
+    status = 200
+    force = false
+
+[[redirects]]
+    from = "/api/*"
+    to = "https://api.carbonintensity.org.uk/intensity"
     status = 200
     force = false
