Tweaked build command.

--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "A dial to show the avergage carbon is being output by the electricity consumption in the UK.",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack -p",
-    "dev": "webpack-dev-server --open",
+    "build": "npm run build:site && npm run build:functions",
+    "dev:site": "webpack-dev-server --open",
+    "build:site" : "webpack -p",
     "dev:functions": "netlify-lambda serve _functions",
-    "functions": "webpack --config webpack.functions.js"
+    "build:functions": "webpack --config webpack.functions.js"
   },
   "author": "Ian James, ijames@wwf.org.uk",
   "license": "UNLICENSED",
